# CS277

./: .gitignore  .gitmodules  README.md  pyproject.toml
Bin-Packing/: all.py  readme.md
Bin-Packing/Approx/: first_fit.py
Bin-Packing/Approx/bin_packing_ff_dataset_20250601_195502/: dataset_readme.txt  input.npy
Bin-Packing/Nas/: Dockerfile  README.md  bin-packing-rnn.ckpt  bin-packing.ckpt  cs277_dataset.py  cs277_dataset_1d.py  exported_arch.example.json  model.py  simple_dnn.py  simple_rnn.py
Bin-Packing/Optimal/: brute_force_alg.py
Bin-Packing/Optimal/bin_packing_optimal_dataset_20250601_200335/: dataset_readme.txt  input.npy
Bin-Packing/SpeedPlot/: latency_measure.ipynb  run.sh  speed_comp.py  speed_tail.py
Bin-Packing/data/: first_fit_data_example.txt
Bin-Packing/data/bin_packing_firstfit_size=10_dataset_20250602_151517/: input.npy  (+2 more)
Bin-Packing/dataGenerator/: generate_first_fit.cpp  readme.md
Dockerfile/: Dockerfile  build.sh  install_req.sh  run.sh  start_image.sh
EdgeDetection/: canny.py  sobel.py  sobel_datagen.py  sobel_speed_comp.py
FFT/: UNet.py  fft.py  fft_speed_comp.py  train.py
GraphCover/: readme.md
GraphCover/Approximate/: greedy_algorithm.py  greedy_generator.py
GraphCover/Nas/: Dockerfile  cs277_dataset.py  cs277_graph_cov_space.py  graph_cover.ckpt  simple_dnn.py
GraphCover/Original/: BruteForceAlgorithm.py  optimal_generator.py
GraphCover/SpeedPlot/: speed_comp.py
GraphCover/dataGenerator/: generate_graph_cover.py
image_NN/: train_sobel.py  unet.py
imagenet_images/broccoli raab/: 341903094_f36d6d2254.jpg%3Fv%3D0
(+42 files in other folders)
