[project]
name = "cs277"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "graphviz>=0.20.3",
    "lightning[extra]>=2.0,<2.1",
    "matplotlib>=3.10.3",
    "nni>=3.0",
    "notebook>=7.4.3",
    "numpy<2",
    "setuptools>=80.9.0",
    "tensorboard>=2.19.0",
    "torch<2",
    "torchaudio>=0.13.1",
    "torchmetrics>1,<1.3",
    "torchvision>=0.14.1",
]

[tool.uv.sources]
nni = { path = "../nni-3.0.1-py3-none-any.whl" }
